[ADD] Agregar fuentes Fase 1 final

--- a/codemirror/index.css
+++ b/codemirror/index.css
@@ -56,3 +56,21 @@ button {
     width: 1010px;
     background-color: #54524d;
 }
+
+
+table {
+    width: 90%;
+}
+
+table,
+th,
+td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+th,
+td,h1 {
+    padding: 5px;
+    text-align: center;
+}
